--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -2,32 +2,33 @@
 
 readonly GCC="gcc-2.95.3"
 readonly GCC_VER="2.95.3"
-readonly GCC_CORE_SRC="../archive/gcc-core-${GCC_VER}.tar.bz2"
-readonly GCC_CORE_PATCH="../gcc/gcc-core-${GCC_VER}-amiga.diff.gz"
-readonly GCC_CPP_SRC="../archive/gcc-g++-${GCC_VER}.tar.bz2"
-readonly GCC_CPP_PATCH="../gcc/gcc-g++-${GCC_VER}-amiga.diff.gz"
+readonly GCC_CORE_SRC="gcc-core-${GCC_VER}.tar.gz"
+readonly GCC_CPP_SRC="gcc-g++-${GCC_VER}.tar.gz"
+readonly GCC_CORE_PATCH="gcc-core-${GCC_VER}-amiga.diff.gz"
+readonly GCC_CPP_PATCH="gcc-g++-${GCC_VER}-amiga.diff.gz"
 
 readonly BINUTILS="binutils-2.9.1"
-readonly BINUTILS_SRC="../archive/${BINUTILS}.tar.bz2"
-readonly BINUTILS_PATCH="../binutils/${BINUTILS}-amiga.diff.gz"
+readonly BINUTILS_SRC="${BINUTILS}.tar.gz"
+readonly BINUTILS_PATCH="${BINUTILS}-amiga.diff.gz"
 
 readonly IXEMUL_VER="48.2"
 readonly IXEMUL="ixemul-${IXEMUL_VER}"
-readonly IXEMUL_SRC="../archive/${IXEMUL}.tar.bz2"
+readonly IXEMUL_SRC="${IXEMUL}.lha"
 
 readonly LIBNIX="libnix-2.1"
-readonly LIBNIX_SRC="../archive/${LIBNIX}.tar.bz2"
+readonly LIBNIX_SRC="${LIBNIX}.tar.gz"
 
 readonly BISON="bison-1.28"
-readonly BISON_SRC="../archive/${BISON}.tar.bz2"
+readonly BISON_SRC="${BISON}.tar.gz"
 
 readonly NDK="NDK_3.9"
-readonly NDK_SRC="../archive/NDK39.lha"
+readonly NDK_SRC="NDK39.lha"
 
 readonly FD2INLINE="fd2inline-1.21"
-readonly FD2INLINE_SRC="../archive/${FD2INLINE}.tar.bz2"
+readonly FD2INLINE_SRC="${FD2INLINE}.tar.gz"
 
 readonly SFDC="sfdc-1.4"
-readonly SFDC_SRC="../archive/${SFDC}.tar.bz2"
+readonly SFDC_SRC="${SFDC}.lha"
 
-readonly LIBAMIGA_SRC="../archive/libamiga-bin.tar.bz2"
+readonly LIBAMIGA="libamiga"
+readonly LIBAMIGA_SRC="${LIBAMIGA}-bin.tar.gz"
