Original patches for tracking purposes.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -9,10 +9,8 @@ readonly GCC_CPP_PATCH="gcc-g++-${GCC_VER}-amiga.diff.gz"
 
 readonly BINUTILS="binutils-2.9.1"
 readonly BINUTILS_SRC="${BINUTILS}.tar.gz"
-readonly BINUTILS_PATCH="${BINUTILS}-amiga.diff.gz"
 
-readonly IXEMUL_VER="48.2"
-readonly IXEMUL="ixemul-${IXEMUL_VER}"
+readonly IXEMUL="ixemul-48.2"
 readonly IXEMUL_SRC="${IXEMUL}.lha"
 
 readonly LIBNIX="libnix-2.1"
