Build different compiler version with same script.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -7,6 +7,23 @@ readonly GCC_CPP_SRC="gcc-g++-${GCC_VER}.tar.gz"
 readonly GCC_CORE_PATCH="gcc-core-${GCC_VER}-amiga.diff.gz"
 readonly GCC_CPP_PATCH="gcc-g++-${GCC_VER}-amiga.diff.gz"
 
+# BEGIN GCC dependencies
+readonly GMP="gmp-4.3.2"
+readonly GMP_SRC="${GMP}.tar.bz2"
+
+readonly MPC="mpc-0.8.1"
+readonly MPC_SRC="${MPC}.tar.gz"
+
+readonly MPFR="mpfr-2.4.2"
+readonly MPFR_SRC="${MPFR}.tar.bz2"
+
+readonly ISL="isl-0.10"
+readonly ISL_SRC="${ISL}.tar.bz2"
+
+readonly CLOOG="cloog-0.17.0"
+readonly CLOOG_SRC="${CLOOG}.tar.gz"
+# END GCC dependencies
+
 readonly BINUTILS="binutils-2.9.1"
 readonly BINUTILS_SRC="${BINUTILS}.tar.gz"
 
@@ -16,6 +33,7 @@ readonly IXEMUL_SRC="${IXEMUL}.lha"
 readonly LIBNIX="libnix-2.1"
 readonly LIBNIX_SRC="${LIBNIX}.tar.gz"
 
+# Needed by GCC 2.95.3
 readonly BISON="bison-1.35"
 readonly BISON_SRC="${BISON}.tar.gz"
 
