Fix problems with awk & libnix / libstubs.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -37,6 +37,11 @@ readonly LIBNIX_SRC="${LIBNIX}.tar.gz"
 readonly BISON="bison-1.35"
 readonly BISON_SRC="${BISON}.tar.gz"
 
+# Needed to replace built-in awk on MacOS X.
+# Otherwise libnix cannot produce complete libstubs.
+readonly GAWK="gawk-3.1.8"
+readonly GAWK_SRC="${GAWK}.tar.gz"
+
 readonly NDK="NDK_3.9"
 readonly NDK_SRC="NDK39.lha"
 
