--- a/patches/binutils-2.9.1/gas/Makefile.am.diff
+++ b/patches/binutils-2.9.1/gas/Makefile.am.diff
@@ -1,6 +1,6 @@
---- binutils-2.9.1/gas/Makefile.am	Fri May  1 08:45:03 1998
-+++ binutils-2.9.1/gas/Makefile.am	Sun Aug 23 00:00:00 1998
-@@ -63,6 +63,7 @@ CPU_TYPES = \
+--- binutils-2.9.1/gas/Makefile.am	1998-05-01 17:45:03.000000000 +0200
++++ binutils-2.9.1/gas/Makefile.am	2012-08-04 12:43:35.000000000 +0200
+@@ -63,6 +63,7 @@
  # We deliberately omit som, since it does not work as a cross assembler.
  
  OBJ_FORMATS = \
@@ -8,7 +8,7 @@
  	aout \
  	bout \
  	coff \
-@@ -239,6 +240,7 @@ TARGET_CPU_HFILES = \
+@@ -239,6 +240,7 @@
  # OBJ files in config
  
  OBJ_FORMAT_CFILES = \
@@ -16,7 +16,7 @@
  	config/obj-aout.c \
  	config/obj-bout.c \
  	config/obj-coff.c \
-@@ -251,6 +253,7 @@ OBJ_FORMAT_CFILES = \
+@@ -251,6 +253,7 @@
  	config/obj-vms.c
  
  OBJ_FORMAT_HFILES = \
@@ -24,7 +24,7 @@
  	config/obj-aout.h \
  	config/obj-bout.h \
  	config/obj-coff.h \
-@@ -266,6 +269,7 @@ OBJ_FORMAT_HFILES = \
+@@ -266,6 +269,7 @@
  
  TARG_ENV_HFILES = \
  	config/te-386bsd.h \
@@ -32,7 +32,7 @@
  	config/te-aux.h \
  	config/te-delta.h \
  	config/te-delt88.h \
-@@ -448,6 +452,8 @@ ecoff.o : ecoff.c ecoff.h $(INCDIR)/coff
+@@ -448,6 +452,8 @@
  # We need all these explicit rules for the multi stuff.  Because of
  # these rules, we don't need one for OBJ_FORMAT_O.
  
@@ -41,7 +41,7 @@
  obj-aout.o : $(srcdir)/config/obj-aout.c
  	$(COMPILE) -c $(srcdir)/config/obj-aout.c
  obj-bout.o : $(srcdir)/config/obj-bout.c
-@@ -964,6 +970,9 @@ TCDEP_m32r_elf = $(srcdir)/config/obj-el
+@@ -964,6 +970,9 @@
    $(INCDIR)/bfdlink.h $(srcdir)/config/tc-m32r.h subsegs.h \
    $(INCDIR)/obstack.h $(INCDIR)/symcat.h cgen-opc.h $(srcdir)/../opcodes/m32r-opc.h \
    $(INCDIR)/opcode/cgen.h
@@ -51,7 +51,7 @@
  TCDEP_m68k_aout = $(srcdir)/config/obj-aout.h $(srcdir)/config/tc-m68k.h \
    $(BFDDIR)/libaout.h $(INCDIR)/bfdlink.h $(INCDIR)/obstack.h \
    subsegs.h $(INCDIR)/opcode/m68k.h $(srcdir)/config/m68k-parse.h
-@@ -1213,6 +1222,9 @@ OBJDEP_m32r_elf = $(srcdir)/config/obj-e
+@@ -1213,6 +1222,9 @@
    $(INCDIR)/elf/common.h $(INCDIR)/elf/internal.h $(INCDIR)/elf/external.h \
    $(INCDIR)/bfdlink.h $(srcdir)/config/tc-m32r.h subsegs.h \
    $(INCDIR)/obstack.h $(INCDIR)/aout/aout64.h
@@ -61,7 +61,7 @@
  OBJDEP_m68k_aout = $(srcdir)/config/obj-aout.h $(srcdir)/config/tc-m68k.h \
    $(BFDDIR)/libaout.h $(INCDIR)/bfdlink.h $(INCDIR)/aout/aout64.h \
    $(INCDIR)/obstack.h
-@@ -1436,6 +1448,8 @@ DEP_m32r_coff = $(srcdir)/config/obj-cof
+@@ -1436,6 +1448,8 @@
  DEP_m32r_elf = $(srcdir)/config/obj-elf.h $(BFDDIR)/elf-bfd.h \
    $(INCDIR)/elf/common.h $(INCDIR)/elf/internal.h $(INCDIR)/elf/external.h \
    $(INCDIR)/bfdlink.h $(srcdir)/config/tc-m32r.h
