--- a/patches/binutils-2.9.1/bfd/Makefile.am.diff
+++ b/patches/binutils-2.9.1/bfd/Makefile.am.diff
@@ -1,6 +1,6 @@
---- binutils-2.9.1/bfd/Makefile.am	Fri May  1 08:47:58 1998
-+++ binutils-2.9.1/bfd/Makefile.am	Sun Aug 23 00:00:00 1998
-@@ -98,7 +98,10 @@ ALL_MACHINES_CFILES = \
+--- binutils-2.9.1/bfd/Makefile.am	1998-05-01 17:47:58.000000000 +0200
++++ binutils-2.9.1/bfd/Makefile.am	2012-08-04 12:43:35.000000000 +0200
+@@ -98,7 +98,10 @@
  # The .o files needed by all of the 32 bit vectors that are configured into
  # target_vector in targets.c if configured with --enable-targets=all.
  BFD32_BACKENDS = \
@@ -11,7 +11,7 @@
  	aout-arm.lo \
  	aout-ns32k.lo \
  	aout-sparcle.lo \
-@@ -203,7 +206,10 @@ BFD32_BACKENDS = \
+@@ -203,7 +206,10 @@
  	xcofflink.lo
  
  BFD32_BACKENDS_CFILES = \
@@ -22,7 +22,7 @@
  	aout-arm.c \
  	aout-ns32k.c \
  	aout-sparcle.c \
-@@ -382,7 +388,7 @@ CFILES = \
+@@ -382,7 +388,7 @@
  HFILES = \
  	aout-target.h aoutf1.h aoutx.h coffcode.h coffswap.h \
  	ecoffswap.h elf32-hppa.h elf32-target.h elf64-target.h \
@@ -31,7 +31,7 @@
  	libbfd.h libcoff.h libecoff.h elf-bfd.h libhppa.h libieee.h \
  	libnlm.h liboasys.h netbsd.h nlm-target.h nlmcode.h ns32k.h som.h \
  	targmatch.h
-@@ -637,6 +643,9 @@ cpu-vax.lo: cpu-vax.c
+@@ -637,6 +643,9 @@
  cpu-we32k.lo: cpu-we32k.c
  cpu-w65.lo: cpu-w65.c
  cpu-z8k.lo: cpu-z8k.c
