--- a/patches/binutils-2.9.1/bfd/doc/Makefile.am.diff
+++ b/patches/binutils-2.9.1/bfd/doc/Makefile.am.diff
@@ -1,5 +1,5 @@
---- binutils-2.9.1/bfd/doc/Makefile.am	Fri May  1 08:48:02 1998
-+++ binutils-2.9.1/bfd/doc/Makefile.am	Sun Aug 23 00:00:00 1998
+--- binutils-2.9.1/bfd/doc/Makefile.am	1998-05-01 17:48:02.000000000 +0200
++++ binutils-2.9.1/bfd/doc/Makefile.am	2012-08-04 12:43:35.000000000 +0200
 @@ -2,7 +2,7 @@
  
  AUTOMAKE_OPTIONS = cygnus
@@ -17,11 +17,10 @@
  	$(srcdir)/../libbfd.c $(srcdir)/../opncls.c \
  	$(srcdir)/../reloc.c  $(srcdir)/../section.c \
  	$(srcdir)/../syms.c  $(srcdir)/../targets.c \
-@@ -182,6 +183,18 @@
- 	$(srcdir)/../../move-if-change linker.tmp linker.texi
+@@ -183,6 +184,18 @@
  	touch s-linker
  linker.texi: s-linker
-+
+ 
 +s-amiga: $(MKDOC) $(srcdir)/../amigaos.c $(srcdir)/doc.str
 +	./$(MKDOC) -f $(srcdir)/doc.str <$(srcdir)/../amigaos.c >amiga.tmp
 +	$(srcdir)/../../move-if-change amiga.tmp amiga.texi
@@ -33,6 +32,7 @@
 +	$(srcdir)/../../move-if-change amigalink.tmp amigalink.texi
 +	touch s-amigalink
 +amigalink.texi: s-amigalink
- 
++
  libbfd.h: $(srcdir)/../libbfd-in.h	\
  	$(srcdir)/../init.c		\
+ 	$(srcdir)/../libbfd.c		\
