--- a/patches/binutils-2.9.1/ld/Makefile.in.diff
+++ b/patches/binutils-2.9.1/ld/Makefile.in.diff
@@ -1,6 +1,6 @@
---- binutils-2.9.1/ld/Makefile.in	Fri May  1 08:48:47 1998
-+++ binutils-2.9.1/ld/Makefile.in	Sun Aug 23 00:00:00 1998
-@@ -169,6 +173,8 @@ ALL_EMULATIONS = \
+--- binutils-2.9.1/ld/Makefile.in	1998-05-01 17:48:47.000000000 +0200
++++ binutils-2.9.1/ld/Makefile.in	2012-08-04 12:43:35.000000000 +0200
+@@ -169,6 +169,8 @@
  	ea29k.o \
  	eaixppc.o \
  	eaixrs6.o \
@@ -9,7 +9,7 @@
  	ealpha.o \
  	earcelf.o \
  	earmaoutb.o \
-@@ -739,6 +940,12 @@ ldemul-list.h: Makefile
+@@ -739,6 +741,12 @@
  	mv ldemul-tmp.h ldemul-list.h
  @TDIRS@
  
