--- a/patches/gcc-2.95.3/gcc/Makefile.in.diff
+++ b/patches/gcc-2.95.3/gcc/Makefile.in.diff
@@ -1,5 +1,5 @@
---- gcc-2.95.3/gcc/Makefile.in	2001-01-25 06:02:58.000000000 -0800
-+++ gcc-2.95.3/gcc/Makefile.in	2011-05-08 19:27:11.013863068 -0700
+--- gcc-2.95.3/gcc/Makefile.in	2001-01-25 15:02:58.000000000 +0100
++++ gcc-2.95.3/gcc/Makefile.in	2012-08-04 11:53:28.000000000 +0200
 @@ -367,7 +367,7 @@
  LIBGCC2_DEPS =
  
