Add libm for non-FPU Amigas.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -30,6 +30,9 @@ readonly BINUTILS_SRC="${BINUTILS}.tar.gz"
 readonly IXEMUL="ixemul-48.2"
 readonly IXEMUL_SRC="${IXEMUL}.lha"
 
+readonly LIBM="libm-5.4"
+readonly LIBM_SRC="${LIBM}.tar.gz"
+
 readonly LIBNIX="libnix-2.1"
 readonly LIBNIX_SRC="${LIBNIX}.tar.gz"
 
