Add vbcc, vasm and vlink.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -53,3 +53,16 @@ readonly SFDC_SRC="${SFDC}.lha"
 
 readonly LIBAMIGA="libamiga"
 readonly LIBAMIGA_SRC="${LIBAMIGA}-bin.tar.gz"
+
+# VBCC toolchain (including traditional AmigaOS linker and assembler)
+readonly VASM="vasm-1.5c"
+readonly VASM_SRC="vasm.tar.gz"
+
+readonly VLINK="vlink-0.14a"
+readonly VLINK_SRC="vlink.tar.gz"
+
+readonly VBCC="vbcc-0.9b"
+readonly VBCC_SRC="vbcc.tar.gz"
+
+readonly VCLIB="vclib-0.9b"
+readonly VCLIB_SRC="vbcc_target_m68k-amigaos.lha"
