--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -36,7 +36,7 @@ readonly LIBM_SRC="${LIBM}.tar.gz"
 readonly LIBNIX="libnix-2.1"
 readonly LIBNIX_SRC="${LIBNIX}.tar.gz"
 
-# Needed by GCC 2.95.3
+# Needed by GCC 2.95.3 and 3.4.6
 readonly BISON="bison-1.35"
 readonly BISON_SRC="${BISON}.tar.gz"
 
