Prepare to experiment with gcc 4.5.0.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -5,22 +5,16 @@ readonly GCC_VER="3.4.6"
 readonly GCC_CORE_SRC="gcc-core-${GCC_VER}.tar.gz"
 readonly GCC_CPP_SRC="gcc-g++-${GCC_VER}.tar.gz"
 
-# BEGIN GCC dependencies
-readonly GMP="gmp-4.3.2"
+# BEGIN GCC 4.x dependencies
+readonly GMP="gmp-5.1.2"
 readonly GMP_SRC="${GMP}.tar.bz2"
 
-readonly MPC="mpc-0.8.1"
+readonly MPC="mpc-1.0.1"
 readonly MPC_SRC="${MPC}.tar.gz"
 
-readonly MPFR="mpfr-2.4.2"
+readonly MPFR="mpfr-3.1.2"
 readonly MPFR_SRC="${MPFR}.tar.bz2"
-
-readonly ISL="isl-0.10"
-readonly ISL_SRC="${ISL}.tar.bz2"
-
-readonly CLOOG="cloog-0.17.0"
-readonly CLOOG_SRC="${CLOOG}.tar.gz"
-# END GCC dependencies
+# END GCC 4.x dependencies
 
 readonly BINUTILS="binutils-2.14"
 readonly BINUTILS_SRC="${BINUTILS}.tar.gz"
