--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -1,7 +1,25 @@
 #!/bin/bash
 
-readonly GCC="gcc-3.4.6"
-readonly GCC_VER="3.4.6"
+case "${VERSION}" in
+  2)
+    readonly GCC_VER="2.95.3"
+    readonly BINUTILS_VER="2.9.1"
+    ;;
+  3)
+    readonly GCC_VER="3.4.6"
+    readonly BINUTILS_VER="2.14"
+    ;;
+  4)
+    readonly GCC_VER="4.5.0"
+    readonly BINUTILS_VER="2.14"
+    ;;
+  *)
+    echo "Unsupported toolchain version: ${VERSION}"
+    exit 1
+    ;;
+esac
+
+readonly GCC="gcc-${GCC_VER}"
 readonly GCC_CORE_SRC="gcc-core-${GCC_VER}.tar.gz"
 readonly GCC_CPP_SRC="gcc-g++-${GCC_VER}.tar.gz"
 
@@ -16,7 +34,7 @@ readonly MPFR="mpfr-3.1.2"
 readonly MPFR_SRC="${MPFR}.tar.bz2"
 # END GCC 4.x dependencies
 
-readonly BINUTILS="binutils-2.14"
+readonly BINUTILS="binutils-${BINUTILS_VER}"
 readonly BINUTILS_SRC="${BINUTILS}.tar.gz"
 
 readonly IXEMUL="ixemul-48.2"
