Texinfo 5.x breaks the build, so use older one.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -55,6 +55,10 @@ readonly BISON_SRC="${BISON}.tar.gz"
 readonly GAWK="gawk-3.1.8"
 readonly GAWK_SRC="${GAWK}.tar.gz"
 
+# Texinfo 5.x breaks backward compatibility.
+readonly TEXINFO="texinfo-4.13"
+readonly TEXINFO_SRC="${TEXINFO}.tar.gz"
+
 readonly NDK="NDK_3.9"
 readonly NDK_SRC="NDK39.lha"
 
