Add fd2sfd tool.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -63,7 +63,10 @@ readonly NDK="NDK_3.9"
 readonly NDK_SRC="NDK39.lha"
 
 readonly SFDC="sfdc-1.4"
-readonly SFDC_SRC="${SFDC}.lha"
+readonly SFDC_SRC="${SFDC}.tar.gz"
+
+readonly FD2SFD="fd2sfd-1.0"
+readonly FD2SFD_SRC="${FD2SFD}.tar.gz"
 
 readonly LIBAMIGA="libamiga"
 readonly LIBAMIGA_SRC="${LIBAMIGA}-bin.tar.gz"
