Add MUI example. Modify install-sdk to create static library.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,13 +1,18 @@
 CC = m68k-amigaos-gcc -noixemul -s
 CFLAGS = -Os -Wall -fomit-frame-pointer
 
-all: hello
+all: hello hello-mui
 
 hello: LDLIBS = -lnix13
 hello: CC += -fbaserel 
 hello: CFLAGS += -m68000 -msmall-code
 hello: hello.c
 
+hello-mui: CC += -fbaserel
+hello-mui: CFLAGS += -m68020 -msmall-code
+hello-mui: LDLIBS = -lmui
+hello-mui: hello-mui.c
+
 clean:
-	rm -f hello
+	rm -f hello hello-mui
 	rm -f *.o *~
