Use libnix from my github fork.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -42,9 +42,9 @@ readonly IXEMUL_SRC="${IXEMUL}.lha"
 
 readonly LIBM="libm-5.4"
 readonly LIBM_SRC="${LIBM}.tar.gz"
+readonly LIBNIX="libnix-2.2"
+readonly LIBNIX_SRC="${LIBNIX}.zip"
 
-readonly LIBNIX="libnix-2.1"
-readonly LIBNIX_SRC="${LIBNIX}.tar.gz"
 
 # Needed by GCC 2.95.3 and 3.4.6
 readonly BISON="bison-1.35"
