Add GNU m4 depedency for hermeticity's sake.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -42,9 +42,12 @@ readonly IXEMUL_SRC="${IXEMUL}.lha"
 
 readonly LIBM="libm-5.4"
 readonly LIBM_SRC="${LIBM}.tar.gz"
+
 readonly LIBNIX="libnix-2.2"
 readonly LIBNIX_SRC="${LIBNIX}.zip"
 
+readonly M4="m4-1.4.17"
+readonly M4_SRC="${M4}.tar.gz"
 
 # Needed by GCC 2.95.3 and 3.4.6
 readonly BISON="bison-1.35"
