Make the build even more hermetic. Pull in GNU flex 2.5.4.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -50,6 +50,9 @@ readonly M4="m4-1.4.17"
 readonly M4_SRC="${M4}.tar.gz"
 
 # Needed by GCC 2.95.3 and 3.4.6
+readonly FLEX="flex-2.5.4"
+readonly FLEX_SRC="${FLEX}.tar.gz"
+
 readonly BISON="bison-1.35"
 readonly BISON_SRC="${BISON}.tar.gz"
 
