Fix permission issues.

--- a/patches/fd2sfd-1.0/Makefile.in.diff
+++ b/patches/fd2sfd-1.0/Makefile.in.diff
@@ -1,17 +1,23 @@
---- fd2sfd-1.0/Makefile.in.orig	2003-07-31 08:10:19.000000000 +0200
-+++ fd2sfd-1.0/Makefile.in	2014-05-25 20:46:57.000000000 +0200
-@@ -40,50 +40,12 @@
+--- fd2sfd-1.0/Makefile.in	2003-07-31 08:10:19.000000000 +0200
++++ fd2sfd-1.0/Makefile.in	2014-05-29 00:09:00.000000000 +0200
+@@ -17,6 +17,7 @@
+ 
+ INSTALL		= @INSTALL@
+ INSTALL_PROGRAM	= @INSTALL_PROGRAM@ -s
++INSTALL_SCRIPT	= @INSTALL_SCRIPT@
+ INSTALL_DATA	= @INSTALL_DATA@
+ 
+ VPATH		= $(srcdir)
+@@ -40,49 +41,11 @@
  
  	# Install tools
  	$(INSTALL_PROGRAM) $(EXECUTABLE) $(bindir)
 -	$(INSTALL_PROGRAM) cross/bin/gg-fix-includes $(bindir)
-+	$(INSTALL_DATA) cross/bin/gg-fix-includes $(bindir)
++	$(INSTALL_SCRIPT) cross/bin/gg-fix-includes $(bindir)
  	for f in `cd $(srcdir)/cross/share/ && find * -type f`; do \
 -	  $(INSTALL_DATA) -D $(srcdir)/cross/share/$${f} $(fd2sfddir)/$${f}; \
-+	  mkdir -p `dirname $(fd2sfddir)/$${f}`; \
-+	  $(INSTALL_DATA) $(srcdir)/cross/share/$${f} `dirname $(fd2sfddir)/$${f}`; \
- 	done
- 
+-	done
+-
 -	# Install example file structure for FDs
 -	$(INSTALL) -d $(prefix)/os-lib/fd/3rd
 -	$(INSTALL) -d $(prefix)/os-lib/fd/3rd-amigaos
@@ -48,9 +54,10 @@
 -		   prefs reaction render resources rexx \
 -		   utility workbench; do \
 -	  $(INSTALL) -d $(prefix)/os-include/morphos/$${dir}; \
--	done
++	  mkdir -p `dirname $(fd2sfddir)/$${f}`; \
++	  $(INSTALL_DATA) $(srcdir)/cross/share/$${f} `dirname $(fd2sfddir)/$${f}`; \
+ 	done
 -	$(INSTALL_DATA) $(srcdir)/README.os-include $(prefix)/os-include/README
--
+ 
  tgz:		all gg-fd2sfd.spec
  	cd $(srcdir) && cvs diff >/dev/null || (echo "Not checked in!"; exit 10)
- 	mkdir $(EXECUTABLE)-$(VERSION)
