--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,8 @@
 *.o
 .DS_Store
 .ropeproject
-archives/*/
-sources/
-stamps/
-build/
-target/
-host/
+.build-ppc/
+.build-m68k/
+m68k-amigaos/
+ppc-amigaos/
 tmp/
