--- a/patches/sfdc/Makefile.in.diff
+++ b/patches/sfdc/Makefile.in.diff
@@ -1,5 +1,5 @@
---- sfdc-1.5/Makefile.in	2005-09-24 16:49:49.000000000 +0200
-+++ sfdc-1.5/Makefile.in	2013-08-30 15:09:31.000000000 +0200
+--- sfdc/Makefile.in	2005-09-24 16:49:49.000000000 +0200
++++ sfdc/Makefile.in	2013-08-30 15:09:31.000000000 +0200
 @@ -32,7 +32,7 @@
  	$(RM) config.status Makefile
  
