--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,12 +1,26 @@
 CC = m68k-amigaos-gcc -noixemul -s
+CXX = m68k-amigaos-g++ -noixemul -s
 CFLAGS = -Os -Wall -fomit-frame-pointer
+CXXFLAGS = -Os -Wall -fomit-frame-pointer
 
-all: hello hello-mui test-mmu
+BINS = hello-ks13 hello-ks20 hello-stdio hello-mui test-mmu
 
-hello: CC += -fbaserel 
-hello: CFLAGS += -m68000 -msmall-code
-hello: LDLIBS = -lnix13
-hello: hello.c
+all: $(BINS)
+
+hello-ks13: CC += -fbaserel 
+hello-ks13: CFLAGS += -m68000 -msmall-code
+hello-ks13: LDLIBS = -lnix13
+hello-ks13: hello-ks13.c
+
+hello-ks20: CC += -fbaserel 
+hello-ks20: CFLAGS += -m68000 -msmall-code
+hello-ks20: hello-ks20.c
+
+hello-stdio: CFLAGS += -m68020
+hello-stdio: hello-stdio.c
+
+hello-iostream: CXXFLAGS += -m68020
+hello-iostream: hello-iostream.cpp
 
 hello-mui: CC += -fbaserel
 hello-mui: CFLAGS += -m68020 -msmall-code
@@ -18,5 +32,5 @@ test-mmu: CFLAGS += -m68060 -msmall-code
 test-mmu: test-mmu.c
 
 clean:
-	rm -f hello hello-mui test-mmu
+	rm -f $(BINS)
 	rm -f *.o *~
