Fix IRA compilation under Cygwin.

--- a/patches/ira/Makefile.diff
+++ b/patches/ira/Makefile.diff
@@ -5,7 +5,7 @@
  CC	= gcc
  CCOUT	= -o 
 -COPTS	= -c -O2
-+COPTS	= -c -O2 -Wall -Wno-pointer-sign
++COPTS	= -c -O2 -Wall -Wno-pointer-sign -Wno-unused-result
  LD	= $(CC)
  LDOUT	= $(CCOUT)
  LDFLAGS	=
