Make libnix work with Kickstart 1.3 (partially).

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,16 +1,16 @@
-CC = m68k-amigaos-gcc -s
-CXX = m68k-amigaos-g++ -s
+CC = m68k-amigaos-gcc -g
+CXX = m68k-amigaos-g++ -g
 CFLAGS = -Os -Wall -fomit-frame-pointer
 CXXFLAGS = -Os -Wall -fomit-frame-pointer
 
 BINS = hello-ks13 hello-ks20 hello-ks20.clib2 hello-stdio hello-stdio.clib2 \
-       hello-iostream hello-mui test-mmu \
+       hello-stdio.nix13 hello-iostream hello-mui test-mmu \
        simple.library simple.library_r simple.device
 
 all: $(BINS) $(OBJS)
 
 hello-ks13: hello-ks13.c
-	$(CC) -noixemul -fbaserel -m68000 -msmall-code $(CFLAGS) -o $@ $< -lnix13
+	$(CC) -mcrt=nix13 -fbaserel -m68000 -msmall-code $(CFLAGS) -o $@ $<
 
 hello-ks20: hello-ks20.c
 	$(CC) -noixemul -fbaserel32 -m68020 -msmall-code $(CFLAGS) -o $@ $<
@@ -20,6 +20,9 @@ hello-ks20.clib2: hello-ks20.c
 
 hello-stdio: hello-stdio.c
 	$(CC) -noixemul -m68020 $(CFLAGS) -o $@ $<
+
+hello-stdio.nix13: hello-stdio-ks13.c
+	$(CC) -mcrt=nix13 -m68000 $(CFLAGS) -o $@ $<
 
 hello-stdio.clib2: hello-stdio.c
 	$(CC) -mcrt=clib2 -m68020 $(CFLAGS) -o $@ $<
