--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "submodules/fd2pragma"]
 	path = submodules/fd2pragma
 	url = https://github.com/adtools/fd2pragma.git
+[submodule "submodules/binutils-2.14"]
+	path = submodules/binutils-2.14
+	url = https://github.com/adtools/amigaos-binutils-2.14.git
